--- a/dem_differencing.ipynb
+++ b/dem_differencing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "id": "specialized-supplier",
    "metadata": {},
    "outputs": [],
@@ -25,12 +25,14 @@
     "import math\n",
     "\n",
     "from pathlib import Path\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import os\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 34,
    "id": "individual-optics",
    "metadata": {},
    "outputs": [],
@@ -59,13 +61,24 @@
     "# outunclipped = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\DoD\\DoD_2017-HDR_Reinterp_script_gen_5m.tif\")\n",
     "# outclipped = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\DoD\\DoD_2017-HDR_Reinterp_script_gen_clipped_5m.tif\")\n",
     "\n",
+    "# #Bathy pts adjusted, interpolated (tinned and tin_ras) by jlogan (2m cell size)\n",
+    "# #inputs\n",
+    "# dem1 = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\bathy\\HDR_2016_reinterpolate\\tinras\\HDR_reinterp_adj_2m.tif\")\n",
+    "# dem2 = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\bathy\\ReprojectedBathyDougSmith\\2017\\lp17cube1m_NAD832011_int_al_res2m.tif\")\n",
+    "# #out\n",
+    "# outunclipped = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\DoD\\DoD_2017-HDR_Reinterp_script_gen_2m.tif\")\n",
+    "# outclipped = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\DoD\\DoD_2017-HDR_Reinterp_script_gen_clipped_2m.tif\")\n",
+    "\n",
     "#Bathy pts adjusted, interpolated (tinned and tin_ras) by jlogan (2m cell size)\n",
     "#inputs\n",
-    "dem1 = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\bathy\\HDR_2016_reinterpolate\\tinras\\HDR_reinterp_adj_2m.tif\")\n",
-    "dem2 = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\bathy\\ReprojectedBathyDougSmith\\2017\\lp17cube1m_NAD832011_int_al_res2m.tif\")\n",
+    "dem1 = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\bathy\\HDR_2016_reinterpolate\\tinras\\HDR_reinterp_adj_breaklines_1m.tif\")\n",
+    "dem2 = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\bathy\\ReprojectedBathyDougSmith\\2017\\lp17cube1m_NAD832011_integer_aligned.tif\")\n",
     "#out\n",
-    "outunclipped = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\DoD\\DoD_2017-HDR_Reinterp_script_gen_2m.tif\")\n",
-    "outclipped = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\DoD\\DoD_2017-HDR_Reinterp_script_gen_clipped_2m.tif\")\n",
+    "outunclipped = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\DoD\\DoD_2017-HDR_Reinterp_breaklines_script_gen_1m.tif\")\n",
+    "outclipped = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\DoD\\DoD_2017-HDR_Reinterp_breaklines_script_gen_clipped_1m.tif\")\n",
+    "\n",
+    "#Raster cell size\n",
+    "cellsize = 1\n",
     "\n",
     "#DoD clip\n",
     "clip_shp = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\DoD\\shp\\2016_hull_poly.shp\")"
@@ -73,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 36,
    "id": "harmful-medicine",
    "metadata": {},
    "outputs": [
@@ -147,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 37,
    "id": "plain-grenada",
    "metadata": {},
    "outputs": [
@@ -155,7 +168,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raster clipping complete. Clipped raster saved to: C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\DoD\\DoD_2017-HDR_Reinterp_script_gen_clipped_2m.tif\n"
+      "Raster clipping complete, deleteing unclipped raster. Clipped raster saved to: C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\DoD\\DoD_2017-HDR_Reinterp_breaklines_script_gen_1m.tif\n"
      ]
     }
    ],
@@ -178,20 +191,50 @@
     "    'transform': clipped_transform\n",
     "})\n",
     "\n",
-    "# Set the output path for the clipped raster\n",
-    "output_file = outclipped\n",
-    "\n",
     "# Write the clipped raster to the output path\n",
-    "with rasterio.open(output_file, 'w', **clipped_meta) as dst:\n",
+    "with rasterio.open(outclipped, 'w', **clipped_meta) as dst:\n",
     "    dst.write(clipped_raster)\n",
     "\n",
-    "print('Raster clipping complete. Clipped raster saved to:', output_file)\n"
+    "#delete unclipped\n",
+    "os.remove(outunclipped)\n",
+    "\n",
+    "print('Raster clipping complete, deleteing unclipped raster. Clipped raster saved to:', output_file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "senior-filter",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Volume: 39044.01953125 m^3\n",
+      "Area: 161587 m^2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Calc sum\n",
+    "with rasterio.open(outclipped) as src:\n",
+    "    # Read the raster data as NumPy arrays\n",
+    "    data = src.read(1, masked=True)\n",
+    "\n",
+    "    masked_raster = np.ma.masked_equal(data, src.nodata)\n",
+    "    masked_sum = np.sum(masked_raster)\n",
+    "    \n",
+    "    vol = np.sum(masked_raster) * cellsize * cellsize\n",
+    "    area = masked_raster.count() * cellsize * cellsize\n",
+    "    \n",
+    "    print(f'Volume: {vol} m^3\\nArea: {area} m^2')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "senior-filter",
+   "id": "e482430e-5cb8-4fe5-bf70-b75cc727e7cd",
    "metadata": {},
    "outputs": [],
    "source": []
