added sum to zonal stats

--- a/zonal_stats.ipynb
+++ b/zonal_stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "grand-channels",
+   "id": "natural-assurance",
    "metadata": {},
    "source": [
     "### Zonal stats for stable areas"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "interior-relations",
+   "execution_count": 1,
+   "id": "urban-religion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,21 +25,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "korean-registration",
+   "execution_count": 18,
+   "id": "filled-reconstruction",
    "metadata": {},
    "outputs": [],
    "source": [
     "#inputs\n",
-    "# dod = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\DoD\\2017-HDR_DepCorrV2_script_generated_clipped.tif\")\n",
-    "dod = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\DoD\\DoD_2017-HDR_Reinterp_script_gen_clipped_2m.tif\")\n",
+    "# dod = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\DoD\\DoD_2017-HDR_DepCorrV2_script_generated_clipped.tif\")\n",
+    "dod = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\DoD\\DoD_2017-HDR_Reinterp_breaklinesv2_script_gen_clipped_1m.tif\")\n",
     "polyshp = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\DoD\\shp\\Stable_areas_script_zonal_stats.shp\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "classified-beach",
+   "execution_count": 19,
+   "id": "french-formation",
    "metadata": {},
    "outputs": [
     {
@@ -47,10 +47,12 @@
      "output_type": "stream",
      "text": [
       "   id      mean       max       min       std\n",
-      "0   1  0.005790  0.290436 -0.295380  0.068473\n",
-      "1   2 -0.058107  0.182709 -0.281342  0.059832\n",
-      "2   3  0.013910  3.119720 -2.986847  0.870645\n",
-      "3   4  0.210170  0.532135 -0.089081  0.065393\n"
+      "0   1  0.005014  0.313477 -0.361816  0.069589\n",
+      "1   2 -0.050336  0.258453 -0.403961  0.067099\n",
+      "2   3  0.064440  2.653412 -1.478241  0.418849\n",
+      "3   4  0.209625  0.472015 -0.136688  0.066501\n",
+      "4   6 -0.154143  2.000153 -2.566071  0.522106\n",
+      "5  90 -0.013173  4.190704 -2.566071  0.313686\n"
      ]
     }
    ],
@@ -67,7 +69,7 @@
     "    transform = src.transform\n",
     "\n",
     "    # Perform the zonal statistics using rasterstats\n",
-    "    stats = zonal_stats(shapefile, raster_values, affine=transform, nodata=src.nodata, stats=['mean', 'max', 'min', 'std'])\n",
+    "    stats = zonal_stats(shapefile, raster_values, affine=transform, nodata=src.nodata, stats=['mean', 'max', 'min', 'std', 'sum'])\n",
     "\n",
     "#     # Perform the zonal statistics using rasterstats\n",
     "#     stats = zonal_stats(polyshp, raster_values, stats=['mean', 'max', 'min', 'std'])\n",
@@ -78,9 +80,10 @@
     "shapefile['max'] = [stat['max'] for stat in stats]\n",
     "shapefile['min'] = [stat['min'] for stat in stats]\n",
     "shapefile['std'] = [stat['std'] for stat in stats]\n",
+    "shapefile['sum'] = [stat['sum'] for stat in stats]\n",
     "\n",
     "#print stats\n",
-    "print(shapefile[['id','mean','max','min','std']])\n",
+    "print(shapefile[['id','mean','max','min','std','sum']])\n",
     "\n",
     "# Save attributes to the updated shapefile\n",
     "shapefile.to_file(polyshp)"
@@ -89,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "wireless-zealand",
+   "id": "bored-drove",
    "metadata": {},
    "outputs": [],
    "source": []
