--- a/VolumetricUncertaintyCalculations.ipynb
+++ b/VolumetricUncertaintyCalculations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "familiar-opening",
+   "id": "frank-macintosh",
    "metadata": {},
    "source": [
     "### DEM Differencing Volumetric Uncertainty Calculations\n",
@@ -14,8 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "touched-destruction",
+   "execution_count": 4,
+   "id": "leading-jacob",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,31 +24,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "successful-birmingham",
+   "execution_count": 19,
+   "id": "remarkable-decision",
    "metadata": {},
    "outputs": [],
    "source": [
     "# inputs\n",
-    "L = 0.25    #cell size\n",
-    "n = 682640  #number of cells\n",
+    "L = 1    #cell size\n",
+    "n = 161587  #number of cells\n",
     "\n",
     "confidence_level = 95 #95 or 68 (if 95, sigma_re and sigma_sc will be multiplied by 1.96, (normal distribution assumed)\n",
     "\n",
     "# Uncorrelated random error \n",
-    "sigma_re = 0.11584754   #Standard deviation of vertical residuals in stable areas of the adjusted (final) DoD\n",
+    "sigma_re = 0.06   #Standard deviation of vertical residuals in stable areas of the adjusted (final) DoD\n",
     "\n",
     "# Spatially correlated random error \n",
-    "sill = 0.0071469        #Sill of the semivariogram model (simga_sc = sqrt(sill))\n",
-    "a = 2.3546              #Range of the semivariogram model\n",
+    "sill = 0.86        #Sill of the semivariogram model (simga_sc = sqrt(sill))\n",
+    "a = 17              #Range of the semivariogram model\n",
     "\n",
     "# Residual Systematic error \n",
-    "sigma_sys = 0.104254974  #Absolute mean of residuals in stable areas of the adjusted (final) DoD (plus stdev?)"
+    "sigma_sys = 0.07  #Absolute mean of residuals in stable areas of the adjusted (final) DoD (plus stdev?)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "detailed-female",
+   "id": "lesbian-craps",
    "metadata": {},
    "source": [
     "***\n",
@@ -72,20 +72,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "rotary-simon",
+   "execution_count": 20,
+   "id": "scientific-applicant",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "L (cell size) =                                    0.25\n",
-      "n (number of cells) =                              682640\n",
-      "sigma_rms (St.Dev. of residuals at 95% C.I.) =     0.22706117839999998\n",
+      "L (cell size) =                                    1\n",
+      "n (number of cells) =                              161587\n",
+      "sigma_rms (St.Dev. of residuals at 95% C.I.) =     0.1176\n",
       "\n",
-      "Mean Uncorrelated Random Error =                   0.00027481916839974867\n",
-      "Volumetric Uncorrelated Random Error =             11.725159819775277\n",
+      "Mean Uncorrelated Random Error =                   0.0002925527014390917\n",
+      "Volumetric Uncorrelated Random Error =             47.27271336743851\n",
       "\n"
      ]
     }
@@ -102,7 +102,7 @@
     "\n",
     "mean_sigma_v_re = sigma_re / np.sqrt(n)\n",
     "\n",
-    "total_sigma_v_re = np.sqrt(n) * np.square(L) * sigma_rms\n",
+    "total_sigma_v_re = np.sqrt(n) * np.square(L) * sigma_re\n",
     "\n",
     "print(f'L (cell size) =                                    {L}\\n'\n",
     "      f'n (number of cells) =                              {n}\\n'\n",
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "prompt-sweet",
+   "id": "severe-undergraduate",
    "metadata": {},
    "source": [
     "***\n",
@@ -138,20 +138,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "artificial-begin",
+   "execution_count": 21,
+   "id": "packed-dream",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "L (cell size) =                                    0.25\n",
-      "n (number of cells) =                              682640\n",
-      "sigma_sc (St.Dev. of residuals at 95% C.I.) =     0.16569710631148632\n",
+      "L (cell size) =                                    1\n",
+      "n (number of cells) =                              161587\n",
+      "sigma_sc (St.Dev. of residuals at 95% C.I.) =     1.8176292251171577\n",
       "\n",
-      "Mean Volumetric Spatially Correlated Random Error =                   9.357635840980476e-05\n",
-      "Total Volumetric Spatially Correlated Random Error =                  63.66416245931655\n"
+      "Mean Volumetric Spatially Correlated Random Error =                   0.060931370070103893\n",
+      "Total Volumetric Spatially Correlated Random Error =                  9812.609556820327\n"
      ]
     }
    ],
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "subtle-future",
+   "id": "funny-timeline",
    "metadata": {},
    "source": [
     "***\n",
@@ -207,20 +207,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "sapphire-vertex",
+   "execution_count": 14,
+   "id": "narrow-continent",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "L (cell size) =                                    0.25\n",
-      "n (number of cells) =                              682640\n",
-      "sigma_sc (St.Dev. of residuals at 95% C.I.) =     0.104254974\n",
+      "L (cell size) =                                    1\n",
+      "n (number of cells) =                              161587\n",
+      "sigma_sc (St.Dev. of residuals at 95% C.I.) =     0.07\n",
       "\n",
-      "Mean Volumetric Systematic Error =                   0.104254974\n",
-      "Total Volumetric Systematic Error =                  4448.03846571\n"
+      "Mean Volumetric Systematic Error =                   0.07\n",
+      "Total Volumetric Systematic Error =                  11311.090000000002\n"
      ]
     }
    ],
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "metric-external",
+   "id": "effective-price",
    "metadata": {},
    "source": [
     "***\n",
@@ -266,19 +266,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "latin-twins",
+   "execution_count": 15,
+   "id": "frozen-simple",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total volumetric error from uncorrelated random error = 11.725159819775277\n",
-      "Total volumetric error from spatially correlated random error = 63.66416245931655\n",
-      "Total volumetric error from systematic error = 4448.03846571\n",
+      "Total volumetric error from uncorrelated random error = 47.27271336743851\n",
+      "Total volumetric error from spatially correlated random error = 826.6766331581885\n",
+      "Total volumetric error from systematic error = 11311.090000000002\n",
       "\n",
-      "Total Volumetric Error =                  4448.509502899844\n"
+      "Total Volumetric Error =                  11341.357324118615\n"
      ]
     }
    ],
@@ -295,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "written-opinion",
+   "id": "framed-alcohol",
    "metadata": {},
    "outputs": [],
    "source": []
