--- a/dem_differencing.ipynb
+++ b/dem_differencing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "civil-parker",
+   "id": "cross-rotation",
    "metadata": {},
    "source": [
     "## Difference two DEMs"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "specialized-supplier",
+   "execution_count": 49,
+   "id": "cathedral-filter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,8 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "individual-optics",
+   "execution_count": 50,
+   "id": "atomic-coach",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,13 +69,21 @@
     "# outunclipped = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\DoD\\DoD_2017-HDR_Reinterp_script_gen_2m.tif\")\n",
     "# outclipped = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\DoD\\DoD_2017-HDR_Reinterp_script_gen_clipped_2m.tif\")\n",
     "\n",
-    "#Bathy pts adjusted, interpolated (tinned and tin_ras) by jlogan (2m cell size)\n",
+    "# #Bathy pts adjusted, interpolated (tinned and tin_ras) by jlogan (1m cell size)\n",
+    "# #inputs\n",
+    "# dem1 = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\bathy\\HDR_2016_reinterpolate\\tinras\\HDR_reinterp_adj_breaklines_1m.tif\")\n",
+    "# dem2 = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\bathy\\ReprojectedBathyDougSmith\\2017\\lp17cube1m_NAD832011_integer_aligned.tif\")\n",
+    "# #out\n",
+    "# outunclipped = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\DoD\\DoD_2017-HDR_Reinterp_breaklines_script_gen_1m.tif\")\n",
+    "# outclipped = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\DoD\\DoD_2017-HDR_Reinterp_breaklines_script_gen_clipped_1m.tif\")\n",
+    "\n",
+    "#Bathy pts adjusted, interpolated with breaklines derived from 2017 data (tinned and tin_ras) by jlogan (1m cell size)\n",
     "#inputs\n",
-    "dem1 = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\bathy\\HDR_2016_reinterpolate\\tinras\\HDR_reinterp_adj_breaklines_1m.tif\")\n",
+    "dem1 = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\bathy\\HDR_2016_reinterpolate\\tinras\\HDR_reinterp_adj_breaklinesv2_1m.tif\")\n",
     "dem2 = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\bathy\\ReprojectedBathyDougSmith\\2017\\lp17cube1m_NAD832011_integer_aligned.tif\")\n",
     "#out\n",
-    "outunclipped = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\DoD\\DoD_2017-HDR_Reinterp_breaklines_script_gen_1m.tif\")\n",
-    "outclipped = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\DoD\\DoD_2017-HDR_Reinterp_breaklines_script_gen_clipped_1m.tif\")\n",
+    "outunclipped = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\DoD\\DoD_2017-HDR_Reinterp_breaklinesv2_script_gen_1m.tif\")\n",
+    "outclipped = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\DoD\\DoD_2017-HDR_Reinterp_breaklinesv2_script_gen_clipped_1m.tif\")\n",
     "\n",
     "#Raster cell size\n",
     "cellsize = 1\n",
@@ -86,8 +94,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "harmful-medicine",
+   "execution_count": 7,
+   "id": "urban-founder",
    "metadata": {},
    "outputs": [
     {
@@ -160,15 +168,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "plain-grenada",
+   "execution_count": 8,
+   "id": "informed-campus",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raster clipping complete, deleteing unclipped raster. Clipped raster saved to: C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\DoD\\DoD_2017-HDR_Reinterp_breaklines_script_gen_1m.tif\n"
+      "Raster clipping complete, deleteing unclipped raster. Clipped raster saved to: C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\DoD\\DoD_2017-HDR_Reinterp_breaklinesv2_script_gen_1m.tif\n"
      ]
     }
    ],
@@ -203,16 +211,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "senior-filter",
+   "execution_count": 51,
+   "id": "qualified-contents",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Volume: 39044.01953125 m^3\n",
-      "Area: 161587 m^2\n"
+      "Volume: 40868.56640625 m^3\n",
+      "Area: 161587 m^2\n",
+      "Number of cells: 161587\n"
      ]
     }
    ],
@@ -220,10 +229,48 @@
     "#Calc sum\n",
     "with rasterio.open(outclipped) as src:\n",
     "    # Read the raster data as NumPy arrays\n",
-    "    data = src.read(1, masked=True)\n",
+    "    masked_raster = src.read(1, masked=True)\n",
     "\n",
-    "    masked_raster = np.ma.masked_equal(data, src.nodata)\n",
-    "    masked_sum = np.sum(masked_raster)\n",
+    "    # masked_raster = np.ma.masked_equal(data, src.nodata)\n",
+    "    # masked_sum = np.sum(masked_raster)\n",
+    "    \n",
+    "    vol = np.sum(masked_raster) * cellsize * cellsize\n",
+    "    area = masked_raster.count() * cellsize * cellsize\n",
+    "    \n",
+    "    print(f'Volume: {vol} m^3\\nArea: {area} m^2\\nNumber of cells: {masked_raster.count()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "incorrect-crown",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "a2a476a2-d765-4a49-9f82-5dbc193ed1cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Volume: 46442.55078125 m^3\n",
+      "Area: 171345 m^2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Calc sum\n",
+    "with rasterio.open(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\bathy\\HDR_2016_reinterpolate\\tinras\\tinDiff17-16.tif\") as src:\n",
+    "    # Read the raster data as NumPy arrays\n",
+    "    masked_raster = src.read(1, masked=True)\n",
+    "\n",
+    "    # masked_raster = np.ma.masked_equal(data, src.nodata)\n",
+    "    # masked_sum = np.sum(masked_raster)\n",
     "    \n",
     "    vol = np.sum(masked_raster) * cellsize * cellsize\n",
     "    area = masked_raster.count() * cellsize * cellsize\n",
@@ -234,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e482430e-5cb8-4fe5-bf70-b75cc727e7cd",
+   "id": "8b4130f1-0cb3-4e6a-a7c1-37c8d09394e1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -256,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
