--- a/zonal_stats.ipynb
+++ b/zonal_stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "natural-assurance",
+   "id": "running-variable",
    "metadata": {},
    "source": [
     "### Zonal stats for stable areas"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "urban-religion",
+   "execution_count": 20,
+   "id": "polyphonic-diagram",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,34 +25,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "filled-reconstruction",
+   "execution_count": 24,
+   "id": "limited-attraction",
    "metadata": {},
    "outputs": [],
    "source": [
     "#inputs\n",
     "# dod = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\DoD\\DoD_2017-HDR_DepCorrV2_script_generated_clipped.tif\")\n",
-    "dod = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\DoD\\DoD_2017-HDR_Reinterp_breaklinesv2_script_gen_clipped_1m.tif\")\n",
+    "# dod = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\DoD\\DoD_2017-HDR_Reinterp_breaklinesv2_script_gen_clipped_1m.tif\")\n",
+    "dod = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\bathy\\HDR_2016_reinterpolate\\tinras\\tinDiff17-16.tif\")\n",
     "polyshp = Path(r\"C:\\Users\\jlogan\\OneDrive - DOI\\LRDP\\LosPadresRes\\DoD\\shp\\Stable_areas_script_zonal_stats.shp\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "french-formation",
+   "execution_count": 25,
+   "id": "colored-enlargement",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   id      mean       max       min       std\n",
-      "0   1  0.005014  0.313477 -0.361816  0.069589\n",
-      "1   2 -0.050336  0.258453 -0.403961  0.067099\n",
-      "2   3  0.064440  2.653412 -1.478241  0.418849\n",
-      "3   4  0.209625  0.472015 -0.136688  0.066501\n",
-      "4   6 -0.154143  2.000153 -2.566071  0.522106\n",
-      "5  90 -0.013173  4.190704 -2.566071  0.313686\n"
+      "   id      mean       max       min       std          sum\n",
+      "0   1  0.021855  0.266405 -0.133894  0.051010   160.416521\n",
+      "1   2 -0.043556  0.105462 -0.150719  0.030764  -247.918743\n",
+      "2   3  0.045487  2.476999 -1.558474  0.316300   281.608497\n",
+      "3   4  0.218479  0.460504 -0.136310  0.051817   984.467060\n",
+      "4   6 -0.125244  1.841583 -1.640967  0.278554  -978.283177\n",
+      "5  90  0.024907  4.168948 -1.640967  0.206552  1935.208390\n"
      ]
     }
    ],
@@ -91,11 +92,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bored-drove",
+   "execution_count": 23,
+   "id": "nominated-vessel",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   id      mean       max       min       std          sum\n",
+      "0   1  0.005014  0.313477 -0.361816  0.069589    36.801666\n",
+      "1   2 -0.050336  0.258453 -0.403961  0.067099  -286.111847\n",
+      "2   3  0.064440  2.653412 -1.478241  0.418849   398.948608\n",
+      "3   4  0.209625  0.472015 -0.136688  0.066501   944.570862\n",
+      "4   6 -0.154143  2.000153 -2.566071  0.522106 -1204.011475\n",
+      "5  90 -0.013173  4.190704 -2.566071  0.313686 -1022.354248\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(shapefile[['id','mean','max','min','std','sum']])"
+   ]
   }
  ],
  "metadata": {
@@ -114,7 +131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
