--- a/DEM_differencing_functions.ipynb
+++ b/DEM_differencing_functions.ipynb
@@ -10,44 +10,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "id": "34ad292f-a616-4ae3-967a-a32d7df387ac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import osgeo\n",
-    "import rasterio\n",
-    "from rasterio.coords import BoundingBox\n",
-    "from rasterio.mask import mask\n",
-    "\n",
-    "import pandas as pd\n",
-    "import geopandas as gpd\n",
-    "import math\n",
-    "\n",
-    "from pathlib import Path\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "import os\n",
-    "\n",
-    "from osgeo import gdal, gdalconst\n",
-    "gdal.UseExceptions()\n",
-    "\n",
-    "#For zonal stats\n",
-    "from rasterio.features import rasterize\n",
-    "from rasterstats import zonal_stats\n",
-    "\n",
-    "# For spatial semivariogram\n",
-    "from pyinterpolate import read_txt\n",
-    "from pyinterpolate import build_experimental_variogram\n",
-    "from pyinterpolate import TheoreticalVariogram, build_theoretical_variogram\n",
-    "\n",
-    "# For resample\n",
-    "from rasterio.enums import Resampling"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "id": "f6ccef25-5f40-49c2-82be-ce120de6395d",
    "metadata": {},
@@ -161,6 +123,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 159,
+   "id": "f4cad5ad-8693-4f7c-8459-7e8e2526b169",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def raster_outline_to_polyshp(inras, outpolyshp):\n",
+    "    '''\n",
+    "    Creates a polygon shapefile of outline of raster, excluding no_data.\n",
+    "    from https://gis.stackexchange.com/questions/429662/extracting-raster-outline-to-a-vector-geometry\n",
+    "\n",
+    "    inras: Path object to raster\n",
+    "    outpolyshp: Path object to output shapefile\n",
+    "    '''\n",
+    "    \n",
+    "    with rasterio.open(inras) as ds:\n",
+    "        gdf = gpd.GeoDataFrame.from_features(dataset_features(ds, bidx=1, as_mask=True, geographic=False, band=False))\n",
+    "        gdf.to_file(outpolyshp)\n",
+    "\n",
+    "    print(f'Polygon shapefile saved to {outpolyshp}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "id": "2c0ec400-37e6-47bd-b357-8e91109195a8",
    "metadata": {},
@@ -216,6 +201,90 @@
     "\n",
     "    print(f'Alignment complete.\\nInteger aligned raster written to: {outras}')\n",
     "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "id": "4a6fc50d-27d4-4d1e-9a86-11e96cf5b9de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def integer_align_resample_raster_bilinear(inras, new_cell_size, outras):\n",
+    "    '''\n",
+    "    Align raster to integer bounds, and resamples to new cell size.\n",
+    "    from gis.stackexchange.com/questions/296770/aligning-many-rasters-using-pyqgis-or-python\n",
+    "\n",
+    "    inras: Path object to input raster\n",
+    "    new_cell_size: float value for new cell size\n",
+    "    outras: Path object to output raster\n",
+    "    '''\n",
+    "    src = gdal.Open(str(inras), gdalconst.GA_ReadOnly)\n",
+    "    dest = gdal.Open(str(inras), gdalconst.GA_ReadOnly)\n",
+    "    srcProj = src.GetProjection()\n",
+    "    ulx, xres, xskew, uly, yskew, yres  = src.GetGeoTransform()\n",
+    "    lrx = ulx + (src.RasterXSize * xres)\n",
+    "    lry = uly + (src.RasterYSize * yres)\n",
+    "    #get target bounds (expanded to nearest integer\n",
+    "    t_ulx = math.floor(ulx)\n",
+    "    t_uly = math.ceil(uly)\n",
+    "    t_lrx = math.ceil(lrx)\n",
+    "    t_lry = math.floor(lry)\n",
+    "    #gdalwarp\n",
+    "    ds = gdal.Warp(str(outras), src, format='GTiff', outputBounds=[t_ulx, t_lry, t_lrx, t_uly], xRes=new_cell_size, yRes=new_cell_size, resampleAlg=gdal.GRA_Bilinear, creationOptions=['COMPRESS=LZW'])\n",
+    "\n",
+    "    print(f'Alignment and resampling complete.\\nNew raster written to: {outras}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "id": "47f5104a-8596-4db9-b827-cffcfa7e2fc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def resample_raster_bilinear(input_raster, new_cell_size, output_raster):\n",
+    "    '''\n",
+    "    Use this function to resample a raster using bilinear interpolation. Value provided in argument \n",
+    "    will be new cell size for output raster.  Rasters must be geotiff.\n",
+    "\n",
+    "    input_raster: Path object to input raster\n",
+    "    new_cell_size: floating point value for cell size of new raster\n",
+    "    output_raster: Path object to resampled output raster\n",
+    "    '''\n",
+    "    # Read the raster using rasterio\n",
+    "    with rasterio.open(input_raster) as src:\n",
+    "        # Get the raster values as a masked numpy array\n",
+    "        # raster_values = src.read(1,masked=True)\n",
+    "        profile = src.profile.copy()\n",
+    "        #get cell size x, y\n",
+    "        cellsize_x, cellsize_y  = src.res\n",
+    "\n",
+    "        #determine scale factor\n",
+    "        scale_factor = cellsize_x/new_cell_size\n",
+    "\n",
+    "        # resample data to target shape\n",
+    "        data = src.read(\n",
+    "                            out_shape=(\n",
+    "                                src.count,\n",
+    "                                int(src.height * scale_factor),\n",
+    "                                int(src.width * scale_factor)\n",
+    "                                ),\n",
+    "                                resampling=Resampling.bilinear\n",
+    "                            )\n",
+    "    \n",
+    "        # scale image transform\n",
+    "        transform = src.transform * src.transform.scale(\n",
+    "                                                        (src.width / data.shape[-1]),\n",
+    "                                                        (src.height / data.shape[-2])\n",
+    "                                                    )\n",
+    "\n",
+    "        profile.update({\"height\": data.shape[-2],\n",
+    "                    \"width\": data.shape[-1],\n",
+    "                   \"transform\": transform})\n",
+    "\n",
+    "    with rasterio.open(output_raster, \"w\", **profile) as dataset:\n",
+    "        dataset.write(data)\n"
    ]
   },
   {
@@ -307,57 +376,6 @@
     "    with rasterio.open(output_raster, 'w', **src_meta) as dst:\n",
     "        # Get the raster values as a numpy array\n",
     "        dst.write(out_raster_values, indexes=1)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 151,
-   "id": "47f5104a-8596-4db9-b827-cffcfa7e2fc1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def resample_raster_bilinear(input_raster, new_cell_size, output_raster):\n",
-    "    '''\n",
-    "    Use this function to resample a raster using bilinear interpolation. Value provided in argument \n",
-    "    will be new cell size for output raster.  Rasters must be geotiff.\n",
-    "\n",
-    "    input_raster: Path object to input raster\n",
-    "    new_cell_size: floating point value for cell size of new raster\n",
-    "    output_raster: Path object to resampled output raster\n",
-    "    '''\n",
-    "    # Read the raster using rasterio\n",
-    "    with rasterio.open(input_raster) as src:\n",
-    "        # Get the raster values as a masked numpy array\n",
-    "        # raster_values = src.read(1,masked=True)\n",
-    "        profile = src.profile.copy()\n",
-    "        #get cell size x, y\n",
-    "        cellsize_x, cellsize_y  = src.res\n",
-    "\n",
-    "        #determine scale factor\n",
-    "        scale_factor = cellsize_x/new_cell_size\n",
-    "\n",
-    "        # resample data to target shape\n",
-    "        data = src.read(\n",
-    "                            out_shape=(\n",
-    "                                src.count,\n",
-    "                                int(src.height * scale_factor),\n",
-    "                                int(src.width * scale_factor)\n",
-    "                                ),\n",
-    "                                resampling=Resampling.bilinear\n",
-    "                            )\n",
-    "    \n",
-    "        # scale image transform\n",
-    "        transform = src.transform * src.transform.scale(\n",
-    "                                                        (src.width / data.shape[-1]),\n",
-    "                                                        (src.height / data.shape[-2])\n",
-    "                                                    )\n",
-    "\n",
-    "        profile.update({\"height\": data.shape[-2],\n",
-    "                    \"width\": data.shape[-1],\n",
-    "                   \"transform\": transform})\n",
-    "\n",
-    "    with rasterio.open(output_raster, \"w\", **profile) as dataset:\n",
-    "        dataset.write(data)\n"
    ]
   },
   {
@@ -484,11 +502,7 @@
    "cell_type": "code",
    "execution_count": 65,
    "id": "f81d1f09-55b9-49af-993d-6c4a1e26e1f0",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def SpatiallyCorrelatedRandomErrorAnalysis_OptimizedModel(experimental_variogram, var_range=40, nugget=0):\n",
