Added scikit gstat spherical model function as alternative to pyinterpolate

--- a/Readme.ipynb
+++ b/Readme.ipynb
@@ -31,7 +31,7 @@
     "    - `SpatiallyCorrelatedRandomErrorAnalysis_CreateSemivariogram`: Create spatial semivariogram to help determine approximate `range` size for subsequent semivariograms.\n",
     "    - `SpatiallyCorrelatedRandomErrorAnalysis_OptimizedModel`: Create spatial semivariogram using autofit to find the optimized model type to minimize RMS and find optimized range size.\n",
     "    - `SpatiallyCorrelatedRandomErrorAnalysis_FitSphericalModel`: Create spatial semivariogram using spherical model and find best range and sill values.\n",
-    "    - `SpatiallyCorrelatedRandomErrorAnalysis_FitSphericalModel_gstat`: Create spatial semivariogram using spherical model and find best range and sill values using Scikit Gstat library, which may perform better.\n"
+    "    - `SpatiallyCorrelatedRandomErrorAnalysis_FitSphericalModel_gstat`: Create spatial semivariogram using spherical model and find best range and sill values using Scikit Gstat library, which may perform better. Use best judgment to choose suitable sill and range for spatially correlated random error.\n"
    ]
   },
   {
