--- a/Readme.ipynb
+++ b/Readme.ipynb
@@ -22,7 +22,8 @@
     "- `create_polygon_from_points`: Create shapefile from csv of points.  Used to create clipping mask from x,y locations of measurements (for instance bathymetry points)\n",
     "- `clip_raster`: Clip a raster using a polygon shapefile\n",
     "- `raster_outline_to_polyshp`: Create a polygon shapefile from raster footprint.\n",
-    "- `vertical_adjust_raster`: Adjust raster up or down. Used for co-registration before differencing.\n",
+    "- `vertical_adjust_raster_uniform`: Adjust raster vertically, using a uniform adjustment value. Used for co-registration before differencing.\n",
+    "- `vertical_adjust_raster_with_raster`: Adjust raster vertically, using a adjustment raster (such as an error trend surface). Used for co-registration before differencing.\n",
     "- `DEM_difference`: Difference two DEMs to create a DoD (DEM of difference)\n",
     "- `calculate_volume`: Calulate the volume of a DoD\n",
     "- `stable_area_stats`: Conduct zonal statistics on a DoD using polygons, and optionally write statistics to shapefile attribute table. Used to assess DoD in stable areas, for uncertainty calculations.\n",
@@ -148,7 +149,7 @@
     "inras2_aligned_resampled_coregistered = Path(r\"C:\\dem_2_1m_align_coreg.tif\")\n",
     "\n",
     "#For instance, the function below adds 0.281 meters to the input DEM to vertically adjust it upward.\n",
-    "vertical_adjust_raster(inras2_aligned_resampled, 0.281, inras2_aligned_resampled_coregistered)"
+    "vertical_adjust_raster_uniform(inras2_aligned_resampled, 0.281, inras2_aligned_resampled_coregistered)"
    ]
   },
   {
